--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: flutter_application
+name: flutter_tutorials
 description: "A new Flutter project."
 publish_to: 'none'
 version: 0.1.0
@@ -7,9 +7,14 @@ environment:
   sdk: ^3.7.0
 
 dependencies:
+  bloc: ^9.0.0
+  bloc_concurrency: ^0.3.0
+  equatable: ^2.0.7
   flutter:
     sdk: flutter
   flutter_bloc: ^9.1.0
+  http: ^1.3.0
+  stream_transform: ^2.1.1
 
 dev_dependencies:
   flutter_test:
